[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/EscapeMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/HighTextTheme.tres" type="Theme" id=2]

[node name="EscapeMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -56.0
margin_right = 45.0
margin_bottom = 76.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 474.0
margin_top = 278.0
margin_right = 550.0
margin_bottom = 322.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartOverButton" type="Button" parent="VBoxContainer"]
margin_right = 76.0
margin_bottom = 20.0
text = "Start Over"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 76.0
margin_bottom = 44.0
text = "Quit"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 76.0
margin_bottom = 68.0
text = "Credits"

[node name="CreditsPanel" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -111.0
margin_right = 106.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="CreditsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 205.0
margin_bottom = 215.0

[node name="CloseCreditsButton" type="Button" parent="CreditsPanel/VSplitContainer"]
margin_right = 198.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "OK"

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsPanel/VSplitContainer"]
margin_left = 2.0
margin_top = 36.0
margin_right = 198.0
margin_bottom = 208.0
theme = ExtResource( 2 )
text = "Game Design, Code, Art, Sound Effects and Music by Jared White (Asgard Heavy Industries)

Fonts by Kenney

Made in Godot!
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/StartOverButton" to="." method="_on_StartOverButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="CreditsPanel/VSplitContainer/CloseCreditsButton" to="." method="_on_CloseCreditsButton_pressed"]
